Feature/keep to python (#61)
* Adding keep cache

* Adding first version of keep python

* Adding first version of keep python

* Working version of python lambda that can be used for

* Working version of python lambda that can be used for

* Working version of python lambda that can be used for

* Working version of python lambda that can be used for

* Removing lock files

* Working version of python lambda that can be used for

* Removing the previous keep files and adding post-hoc caching of results

* Removing the previous keep files and adding post-hoc caching of results

* Adding post request logging lambda

* Adding post request logging lambda

* Adding post request logging lambda

* Adding post request logging lambda

* Adding post request logging lambda

* Adding post request logging lambda

* Adding post request logging lambda
