# cmd/lambda_user/api.gen.go
@@ -1,6 +1,6 @@
 // Package main provides primitives to interact with the openapi HTTP API.
 //
-// Code generated by github.com/deepmap/oapi-codegen version v1.16.2 DO NOT EDIT.
+// Code generated by github.com/deepmap/oapi-codegen version v1.16.3 DO NOT EDIT.
 package main
 
 const (
@@ -18,6 +18,9 @@ type KeepRequest struct {
 
 // KeepResponse defines model for KeepResponse.
 type KeepResponse struct {
+	// Canary The canary string that is used to detect prompt injection.
+	Canary *string `json:"canary,omitempty"`
+
 	// ShieldedPrompt The shielded prompt.
 	ShieldedPrompt string `json:"shielded_prompt"`
 
